chi/org.eclipse.escet.chi.tests/tests/spec/exit/xper_deadlock.run.err
ERROR: Runtime error while executing "X".
at xper "X" near line 15.
CAUSE: Model terminated due to deadlock (causing infinite delay).
